# ddns

./: .gitignore  Cargo.toml  README.md  build.sh  ddns.go  ddns_rfc2136.go  ddns_route53.go  deploy.sh  go.mod  go.sum  main.go  settings.go
.github/workflows/: main.yml  release.yml
src/: main.rs
