[package]
name = "ddns"
version = "0.1.0"
authors = ["Jiajie Chen <c@jia.je>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_route53 = "0.45.0"
rusoto_core = "0.45.0"
tokio = { version = "0.2.22", features = ["full"] }
structopt = "0.3.18"
